# anchor

./: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs  rust_template.rs
client/: Cargo.toml
client/example/: Cargo.toml  run-test.sh
client/src/: lib.rs
lang/: Cargo.toml
spl/: Cargo.toml
spl/src/: idl_build.rs  lib.rs  token_interface.rs
spl/src/jpl_token_2022_extensions/: group_pointer.rs  mod.rs  transfer_fee.rs
tests/anchor-cli-idl/: test.sh
tests/cfo/programs/cfo/: Cargo.toml
tests/cfo/scripts/: localnet.sh
tests/spl/token-extensions/programs/token-extensions/: Cargo.toml
tests/spl/transfer-hook/programs/transfer-hook/: Cargo.toml
tests/zero-copy/programs/zero-copy/: Cargo.toml
