[package]
name = "token-extensions"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_extensions"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../../lang", features = ["init-if-needed"] }
anchor-spl = { path = "../../../../../spl" }
spl-tlv-account-resolution = { package = "jpl-tlv-account-resolution", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
spl-transfer-hook-interface = { package = "jpl-transfer-hook-interface", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
spl-type-length-value = { package = "jpl-type-length-value", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
spl-pod = { package = "jpl-pod", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
