[package]
name = "transfer-hook"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { path = "../../../../../lang", features = ["interface-instructions"] }
anchor-spl = { path = "../../../../../spl" }
spl-discriminator = { package = "jpl-discriminator", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
spl-tlv-account-resolution = { package = "jpl-tlv-account-resolution", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
spl-transfer-hook-interface = { package = "jpl-transfer-hook-interface", git = "https://github.com/jupnet/jupnet-svm.git", tag = "v1.1.3" }
